20050314 display.c: don't extend y past the end of the screen to avoid array
         overruns (Fred).
20050321 widget/{filesel.c,menu.c,roms.c,widget_internals_h}: add title to
	 fileselector widget (half of patch #1150689) (Darren).
20050321 widget/{filesel.c,widget.c,widget_internals.h}: add arrows to
	 show when the fileselector is scrollable (other half of patch
	 #1150689) (Darren).
20050321 settings.dat,ui/options.dat,widget/{filesel.c,menu.c,options.pl,
	 text.c,widget.[ch],widget_internals.h}: add selectable filenames
	 when saving via the widget UI (patch #1150692) (Darren).
20050321 machine.c,memory.c,machines/{scorpion.c,spec128.c,spec16.c,spec48.c,
	 spec_se.c,specplus3.c},pokefinder/{pokefinder.[ch]},ui/ui.h,
	 ui/gtk/{gtkinternals.h,gtkui.c,pokefinder.c},widget/widget.c:
	 various pokefinder improvements (patch #1150701) (Darren).
20050325 menu.[ch],menu_data.c,profile.c,ui.c,ui/ui.h,ui/gtk/gtkui.c,
	 widget/widget.c: improve profiler UI.
20050325 menu_data.c,widget/{Makefile.am,menu.c,pokefinder.c,widget.[ch],
	 widget_internals.h}: add widget pokefinder (patch #1150703)
	 (Darren).
20050325 ChangeLog: bring up to date.
20050325 ui/gtk/gtkui.c,widget/widget.c: add GTK+ joystick confirmation
	 dialog.
20050325 ui/gtk/gtkui.c: don't prompt for joysticks if disabled in config.
20050325 ui/gtk/picture.c: allow input to continue while the keyboard help
	 is being displayed (fixes bug #1145084).
20050326 ChangeLog,widget/{Makefile.am,error.c,menu.c,query.c,widget.[ch],
	 widget_internals.h}: add widget query confirmation dialog (patch
	 #1150708) (Darren).
20050327 z80/z80.c: page in TR-DOS ROM on NMI (enables Pentagon snapshot
	 function to work).
20050327 menu.[ch],ui/gtk/gtkui.c,widget/menu.c: check all media types for
	 changes on exit via widget UIs.
20050402 machines/specplus3.c: stop cancelled attempts to save a +3 disk
	 from silently ejecting the disk.
20050402 ui/gtk/gtkui.c: remove unused variable from menu_file_exit().