@@ -1304,3 +1304,5 @@
 20050402 machines/specplus3.c: stop cancelled attempts to save a +3 disk
 	 from silently ejecting the disk.
 20050402 ui/gtk/gtkui.c: remove unused variable from menu_file_exit().
+20040402 z80/{coretest.c,z80.c}: page in ROM 2 on NMI on Scorpion: enables
+	 monitor to work (fixes bug #1094070) (thanks, Erik Kunze).
